crates/compiler/mir/tests/snapshots/mir_auto_discovery__all_fixtures_mir@aggregates__struct_access_mut.cm.snap
---
source: crates/compiler/mir/tests/mir_auto_discovery.rs
description: MIR snapshot for aggregates/struct_access_mut.cm
input_file: test_data/aggregates/struct_access_mut.cm
---
Fixture: aggregates/struct_access_mut.cm
============================================================
Source code:

// Tests writing a value to a struct field.
struct Point {
    x: felt,
    y: felt,
}

fn test() -> felt {
    let p = Point { x: 10, y: 20 };
    p.y = 30; // Should generate getelementptr followed by a store.
    return p.y;
}

============================================================
Generated MIR:
module {
  // Function 0
  fn test {
    entry: 0

    0:
      return 30

  }

}
