crates/compiler/mir/tests/snapshots/mir_auto_discovery__all_fixtures_mir@aggregates__struct_literal.cm.snap
---
source: crates/compiler/mir/tests/mir_auto_discovery.rs
description: MIR snapshot for aggregates/struct_literal.cm
input_file: test_data/aggregates/struct_literal.cm
---
Fixture: aggregates/struct_literal.cm
============================================================
Source code:
// Tests the creation of a struct literal.
struct Point {
    x: felt,
    y: felt,
}

fn test() -> felt {
    let p = Point { x: 10, y: 20 };
    return 0;
}

============================================================
Generated MIR:
module {
  // Function 0
  fn test {
    entry: 0

    0:
      return 0

  }

}
